# red-alien

./: .gitignore  COPYRIGHT  README  README.md  appveyor.yml  args_to_add.txt  asc-cli  asc-qt  asc.nja  asc.py  asc.py2  asc.ui  asc_gui.py  asc_gui_qt.py  bytefy.py2  gui.glade  part1.pks  pks.lang  pksvscript.lang  pokecommands.py  pokedef.h  pyproject.toml  pyse.py  qtgui.py  requirements.txt  setup.py  test.sh  test_dec.sh  text_translate.py  text_translate.py2  to_convert.txt
asc/: asc.py  asc.ui  asc_qt.py  compiler.py  crash.py  decompiler.py  operators.py  pokecommands.py  preprocessor.py  qtgui.py  text_translate.py  utils.py
asc/data/: aicommands.txt  bscommands.txt  canvas.pks  commands.txt  pktext.tbl
asc/data/stdlib/: std.rbh  stdabilities.rbh  stdargs.rbh  stdattacks.rbh  stdeffects.rbh  stditems.rbh  stdmoves.rbh  stdpoke.rbh  stdtypes.rbh
examples/: atraco.pks  battle.pbs  branch.pks  branches_and_loops.pks  else.pks  features.pks  flag_test.pks  long_text.pks  longtext.pks  loop.pks  multiple.pks  script1.pks  script2.pks  tic-tac-toe_nice.pks  yes_no.pks  yes_no_xse.pks
examples/mustfail/: fail_org.pks
examples/pksv/: flags.pks
examples/xse/: flags.pks
old/: bytefy.py  gui.glade
stdlib/: stditems.rbh  stdmoves.rbh
utils/: pks.vim  pokedef.h  red-alien.desktop  red-alien.xml  x-pks.xml
wine_loader/: README  loader.c  script.bat  script.sh
