[tool.poetry]
name = "red-alien"
version = "2.0.1"
description = "A compiler/decompiler for the script system found in GBA pokemon games"
authors = ["Jaume Delclòs Coll <me@cosarara.me>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3"
PyQt5 = "^5"
QScintilla = "^2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
